--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "la_chica_de_la_ventana",
   "version": "0.1.0",
+  "homepage": "https://Luchineytor.github.io/Blog",
   "private": true,
   "dependencies": {
     "@testing-library/dom": "^10.4.0",
